# diamond-ftir-package

./: LICENSE.txt  README.md  pyproject.toml
src/: Red_IR_Data_Bulk_processing_backup.py
src/diamond_ftir_package/: CAXBD Y component fit.xlsx  CAXBD.json  CAXBD.py  CAXBDY.csv  CAXBDY.json  CAXBDY.py  CAXBDY.xlsx  DiamondSpectrum.py  DiamondSpectrum_CAXBDY Modification.py  Diamond_Map_Feature_Development.md  Diamond_Multispectrum_Fit.py  Diamond_baseline_function_drafts.py  Interactive-1.ipynb  LoadCSV.py  LoadOmnicMAP.py  LoadSPA.py  LoadSPC.py  Process_Diamond_Maps.py  Spectrum_obj.py  __about__.py  typeIIA.json  typeIIA.py
src/diamond_ftir_package/Diamond_Spectrum_Probably Delete/: DiamondSpectrum_maybeDelete.py
src/diamond_ftir_package/Quiddit_Spectra_Files/: CAXBD.xlsx  CAXBDY.csv  CAXBDY.xls  __init__.py  typeIIa_Excel.csv  typeIIa_Excel.xls
src/diamond_ftir_package/SPC/: global_fun.py  spc.py  sub.py
tests/: __init__.py
