[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diamond-ftir-package"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Henry Towbin", email = "24940778+whtowbin@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/diamond-ftir-package#readme"
Issues = "https://github.com/unknown/diamond-ftir-package/issues"
Source = "https://github.com/unknown/diamond-ftir-package"

[tool.hatch.version]
path = "src/diamond_ftir_package/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/diamond_ftir_package tests}"

[tool.coverage.run]
source_pkgs = ["diamond_ftir_package", "tests"]
branch = true
parallel = true
omit = [
  "src/diamond_ftir_package/__about__.py",
]

[tool.coverage.paths]
diamond_ftir_package = ["src/diamond_ftir_package", "*/diamond-ftir-package/src/diamond_ftir_package"]
tests = ["tests", "*/diamond-ftir-package/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
